Revision history for {{$dist->name}}

{{$NEXT}}

  - Don't overwrite CompileTests.fake_home with default if it's set in config
  - Ignore any number of Bundle prefixes from plugin names
    (to allow dynamic configuration of plugins added by bundles)
  - Improvements to tests

3.101     2011-06-16T02:52:05Z

  - Require Bootstrap::lib plugin so that it's available
  - Allow cpanm to choose best place to install (install_command)
  - Remove qw(anno forum kwalitee) from SUPPORT websites
  - Remove Test::Pod::No404s since most links are generated

3.100     2011-05-10T03:16:24Z

  - Use CheckExtraTests instead of ExtraTests to keep xt/ directory
  - Change date format (in Changes file) to W3CDTF for unambiguous dates
  - Match skip_plugins against full name or package (rather than suffix)
  - Allow blank 'releaser' attribute to skip default releaser plugin

  [Prereqs]
  - Bump required Dist::Zilla to 4.200005
  - Bump required @TestingMania to 0.010 (bug fix)

3.000     2011-04-14T05:24:45Z

  - Rework configure() to modify actual 'plugins' attribute
    so that add_plugins() and add_bundle() can be used

  [Add Dist::Zilla Plugins]
  - use InstallRelease with 'install_command' attribute
  - use @TestingMania bundle
  - use @Git bundle (instead of individual plugins)

  - Explicitly prune some non-release files
  - Generate a MANIFEST.SKIP file to satisfy tests/historical expectations

2.001     2011-04-13T02:25:30Z

  - "use" recently required modules (*::Test::Pod::*)
  - test script fix

2.000     2011-04-12T15:32:00Z

  - Rename module into Author:: namespace

  - Use the @Git bundle by default

  - Replace deprecated Dist::Zilla::Plugin::PodLinkTests with
    Dist::Zilla::Plugin::Test::Pod::LinkCheck and
    Dist::Zilla::Plugin::Test::Pod::No404s

1.002     2011-04-11T21:27:00Z

  [Deprecations]
  - The current namespace is deprecated.
    This always was/should have been an Author bundle.

  [Add Dist::Zilla Plugins]
  - Prepender