@@ -12,5 +12,7 @@ skip_plugins = SynopsisTests
 Dist::Zilla::Stash::PodWeaver = 1.001000
 Dist::Zilla::Plugin::Bootstrap::lib = 0
 ; Dist::Zilla::Plugin::Run = 0
+[Prereqs / RuntimeRecommends]
+Dist::Zilla::Plugin::SpellingTests = 0
 [%PodWeaver]
 -StopWords:include = RWSTAUNER's
