@@ -29,7 +29,6 @@ use Dist::Zilla::Plugin::MetaProvides::Package 1.11044404 ();
 use Dist::Zilla::Plugin::MinimumPerl 0.02 ();
 use Dist::Zilla::Plugin::NextRelease ();
 use Dist::Zilla::Plugin::PkgVersion ();
-use Dist::Zilla::Plugin::PodSpellingTests ();
 use Dist::Zilla::Plugin::PodWeaver ();
 use Dist::Zilla::Plugin::Prepender 1.100960 ();
 use Dist::Zilla::Plugin::Repository 0.16 (); # deprecates github_http
@@ -37,6 +36,9 @@ use Dist::Zilla::Plugin::ReportVersions::Tiny 1.01 ();
 use Dist::Zilla::Plugin::TaskWeaver 0.101620 ();
 #use Dist::Zilla::Plugin::Test::Pod::No404s ();
 use Pod::Weaver::PluginBundle::Author::RWSTAUNER ();
+
+# don't require it in case it won't install somewhere
+my $spelling_tests = eval 'require Dist::Zilla::Plugin::PodSpellingTests';
 
 # cannot use $self->name for class methods
 sub _bundle_name {
@@ -243,11 +245,14 @@ sub _add_bundled_plugins {
 
   # generated xt/ tests
     # Test::Pod::Spelling::CommonMistakes ?
-    qw(
-      PodSpellingTests
-    ),
       #Test::Pod::No404s # removed since it's rarely useful
   );
+  if ( $spelling_tests ) {
+    $self->add_plugins('PodSpellingTests');
+  }
+  else {
+    $self->log("PodSpellingTests failed to load.  Pleese dunt mayke ani misteaks.\n");
+  }
 
   $self->add_bundle(
     '@TestingMania' => $self->config_slice({ disable_tests => 'disable' })
@@ -492,7 +497,7 @@ This bundle is roughly equivalent to:
   ; generate t/ and xt/ tests
   [ReportVersions::Tiny]  ; show module versions used in test reports
   [@TestingMania]         ; Lots of dist tests
-  [PodSpellingTests]      ; spell check POD
+  [PodSpellingTests]      ; spell check POD (if installed)
 
   [Manifest]              ; build MANIFEST file (dzil core [@Basic])
 
