@@ -2,6 +2,10 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  [Prereqs]
+  - Dist::Zilla::Plugin::SpellingTests no longer a hard requirement
+
+  [Fixes]
   - Don't overwrite CompileTests.fake_home with default if it's set in config
   - Ignore any number of Bundle prefixes from plugin names
     (to allow dynamic configuration of plugins added by bundles)
